--- a/ECS.bib
+++ b/ECS.bib
@@ -28,6 +28,7 @@ Speaks about the feasibility of recognising foot gestures using an accelerometer
 }
 
 Discusses using SVMs on phones and the challenges of doing so
+This would be good for the discussion in the implementation section
 @incollection{anguita2012human,
 	title={Human activity recognition on smartphones using a multiclass hardware-friendly support vector machine},
 	author={Anguita, Davide and Ghio, Alessandro and Oneto, Luca and Parra, Xavier and Reyes-Ortiz, Jorge L},
