Added second names to acknowledgements

--- a/report.tex
+++ b/report.tex
@@ -71,7 +71,7 @@
 	\listoffigures
 	\listoftables
 	\lstlistoflistings
-	\acknowledgements{Our group would like to take the time to thank the people that helped us with this project. Firstly, our supervisors, Dr Geoff Merrett and Dr Alex Weddell, for their continued and weekly support. Of course, thanks must also be given to ARM for providing such an interesting and thought provoking topic of investigation. Particularly, we would like to thank James and Rohan for acting as a point of contact, and for providing access to the resources we required.}
+	\acknowledgements{Our group would like to take the time to thank the people that helped us with this project. Firstly, our supervisors, Dr Geoff Merrett and Dr Alex Weddell, for their continued and weekly support. Of course, thanks must also be given to ARM for providing such an interesting and thought provoking topic of investigation. Particularly, we would like to thank James Myers and Rohan Gaddh for acting as a point of contact, and for providing access to the resources we required.}
 	%\dedicatory{To \dots}
 	\mainmatter
 	%% ----------------------------------------------------------------
