--- a/figures/first-stairs.tex
+++ b/figures/first-stairs.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 	\begin{tikzpicture}
-	\begin{axis}[xmin=9,xmax=12,xticklabels={,,}]
+	\begin{axis}[xmin=9,xmax=12,xticklabels={,,},xlabel=Time,ylabel={Angular Velocity / rad s$^{-1}$}, ylabel style={yshift=-0.4cm}, xlabel style={yshift=0.4cm}]
 	\addplot[] table [x=time, y=x, col sep=comma] {data/gyro-stairs.csv};
 	\addplot[dashed] table [x=time, y=y, col sep=comma] {data/gyro-stairs.csv};
 	\addplot[dotted] table [x=time, y=z, col sep=comma] {data/gyro-stairs.csv};
