--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -40,7 +40,7 @@ Data for each activity was collected separately to ensure classification could b
 %%%%%%%%%%%%%%%%%%% * Okay
 %%% IFA RESULTS %%%
 %%%%%%%%%%%%%%%%%%%
-This data was run through a series of tools to build a model, as described in section \ref{sec:tools-produced}. Initial evaluation of the performance was conducted using 10-fold cross-validation with the confusion matrix for a simple naive Bayes classifier shown in table \ref{tab:first-confusion}, giving a classification accuracy of 89\%. Despite the data only being collected from a single individual using a small set of instances, the results were considered promising, indicating that this machine learning technique as a method of activity recognition was feasible.
+This data was run through a series of tools to build a model, as described in section \ref{sec:tools}. Initial evaluation of the performance was conducted using 10-fold cross-validation with the confusion matrix for a simple naive Bayes classifier shown in table \ref{tab:first-confusion}, giving a classification accuracy of 89\%. Despite the data only being collected from a single individual using a small set of instances, the results were considered promising, indicating that this machine learning technique as a method of activity recognition was feasible.
 
 \begin{table}
 	\centering
